Java 17 >> Java 11 attempt 2